--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
     "json-server": "^1.0.0-beta.3",
     "sass": "^1.80.6"
